--- a/Owl-Front/DoAn.html
+++ b/Owl-Front/DoAn.html
@@ -63,7 +63,7 @@
       document.getElementById("error").style.color = "lightgreen"
       document.getElementById("error").innerHTML = "Đăng nhập thành công !"
       window.close("DoAn.html");
-      window.open("SubmitForm.html");
+      window.open("littleLemon.html");
     }
     else{
       document.getElementById("error").innerHTML = "Sai tài khoản hoặc mật khẩu !"
