--- a/Owl-Front/UI/littleLemon.html
+++ b/Owl-Front/UI/littleLemon.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Little Lemon</title>
-        <!-- <link rel="stylesheet" href="style_index.css"/> -->
+        <link rel="stylesheet" href="lttleLemonStyle.css"/>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="text-center">
-                        <img src="logoLittleLemon.png" class="img-fluid">
+                        <img src="img/logoLittleLemon.png" class="img-fluid">
                     </div>
                     <div class="alert alert-info" role="alert">Our resturaunt will be closed on New Year's Day</div>
                 </div>
@@ -86,7 +86,8 @@
             </div>
             <div class="row">
                 <div class="row-12">
-                    <div class="text-center">
+                    <div class="text-center" id="online-btn">
+                        <a href="location.html">Our location</a>
                         <div class="btn btn-primary" type="button">Order online</div>
                     </div>
                 </div>
@@ -95,7 +96,7 @@
         <br><br>
         <div>
             <!-- Link to another html files-->
-            <a href="location.html">Our location</a>
+           
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
